# competitor-intelligence-copilot

./: README.md  SECURITY.md  app.py  pyproject.toml  requirements.txt
.streamlit/: config.toml
scripts/: check_setup.py
src/: __init__.py  anthropic_client.py  cache.py  config.py  export.py  models.py  pdf_report.py  prompts.py  report_service.py  usage.py
