[project]
name = "competitor-intelligence-copilot"
version = "4.1.0"
description = "Source-backed competitive intelligence using Claude and Streamlit"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic==0.117.0",
    "pydantic==2.13.4",
    "python-dotenv==1.2.2",
    "reportlab==5.0.0",
    "streamlit==1.59.2",
]
